# CPSP-2026-ASTRA

./: .gitignore  .gitmodules  BLEManager.cpp  BLEManager.h  Link utili  Makefile  README.md  Schema comunicazione.drawio  main.cpp
android-app/app/: build.gradle.kts
beacon-android/gradle/: libs.versions.toml
beacon-esp32-c3/: BLE_beacon.ino  platformio.ini
beacon-esp32-c3/src/: BLE_beacon.cpp
cf-app/: .clang-format  .clang-tidy  .clangd  .gitignore  Kbuild  Makefile  README.md  app-config
cf-app/src/: Kbuild  astra.c  astra_config.h  astra_debug.h  astra_uart.c  astra_uart.h  cobs.h  crtp_uart2_bridge.c  crtp_uart2_bridge.h  deck_uart_esp32_comm_test.c  hello_world.c  uart_framing.c
cf-esp-mod/: .gitignore  CMakeLists.txt
cf-esp-mod/main/: CMakeLists.txt  main.c
cf-esp-module/: .clang-format  .gitignore  platformio.ini
cf-esp-module/include/: BLE_manager.h  BleManager.h  FreeRtosMutex.h  FreeRtosTask.h  UART_daemon.h  UartDaemon.h  UartPort.h  astra_protocol.h  astra_uart.hpp  cJson.hpp
cf-esp-module/src/: AstraUart.cpp  AstraUart.hpp  BLE_manager.cpp  BleManager.cpp  BleManager.hpp  UART_daemon.cpp  UART_daemon.cpp.old  UartDaemon.cpp  UartPort.cpp  (+3 more)
docs/: PROJECT.md
pc-python/: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt  uv.lock.license
pc-python/_old/crazyslam/: mapping.py
pc-python/_old/stationary-ranger/: prova1.py  prova2.py
pc-python/_old/tests/: test_crazyslam_localization.py  test_crazyslam_slam.py  trilateration_test.py
pc-python/astra/: __init__.py  __main__.py  automatic_movement.py  console.py  crazyflie.py  crazyflie_link.py  io.py  localization.py  protocol.py  random_movement.py  rssi.py  trilateration.py
pc-python/cache/: 0EFE0062.json  EBF72315.json
pc-python/crazyslam/: localization.py  slam.py
pc-python/scripts/: astra.py  calibrate.py  console.py  localize_csv.py  log_csv.py  move_and_log_rssi.py  receive_appchannel.py  rssi.py  rssi_map.py  scan.py  slam.py  track.py
pc-python/tests/: debugsensori.py  test_crazyslam_mapping.py  test_localization.py  test_rssi.py
(+46 files in other folders)
