# SPDX-FileCopyrightText: 2026 Alessandro Ricci
# SPDX-FileCopyrightText: 2026 Eyad Issa
# SPDX-FileCopyrightText: 2026 Giulia Pareschi
#
# SPDX-License-Identifier: MIT

[project]
name = "pc-python"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
  "cflib>=0.1.31",
  "matplotlib>=3.10.8",
  "numpy>=2.4.2",
  "pytest>=9.0.2",
  "scikit-image>=0.26.0",
]

[project.scripts]
track = "scripts.track:main"
calibrate = "scripts.calibrate:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astra", "scripts"]
