# SPDX-FileCopyrightText: 2026 Alessandro Ricci
# SPDX-FileCopyrightText: 2026 Eyad Issa
# SPDX-FileCopyrightText: 2026 Giulia Pareschi
#
# SPDX-License-Identifier: MIT

[project]
name = "astra"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
    "cflib>=0.1.31",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
]


[project.scripts]
track = "scripts.track:main"
calibrate = "scripts.calibrate:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["astra", "scripts"]
module-root = ""

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.1.0"]
